Updates about text and adds new projects under recent work section

--- a/portfolio-template/index.html
+++ b/portfolio-template/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/elysia-profile.jpeg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/elysia-profile.jpeg" alt="Photo of Elysia at a wooden spoon carving class." /></a>
 					<h1><strong>Aloha! I'm Elysia</strong>, an aspiring<br />
 					web developer & designer.</h1>
 				</div>
@@ -28,10 +28,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Elysia Gabe is an Oakland-based aspiring web developer and designer, currently studying at Lambda School. Take a look at some of her recent work below.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -42,20 +41,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/mika-florals-screenshot.png" class="image fit thumb"><img src="images/mika-florals-screenshot.png" alt="" /></a>
+								<a href="http://g.recordit.co/tk70HywTQd.gif" class="image fit thumb"><img src="images/mika-florals-screenshot.png" alt="Screenshot of Mika Florals Website" /></a>
 								<h3>Mika Florals Website</h3>
 								<p>One-page concept website for a fictinal florist and flower shop.<br/>
 								<a href="https://codepen.io/elysia-gabe/pen/vYBoyzm">View on CodePen.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/great-idea-screenshot.png" alt="" /></a>
+								<h3>Great Idea Agency Website</h3>
+								<p>Concept website for a ficitional digital services agency. Pages include Home, Services and About.<br/>
+								<a href="https://github.com/elysiagabe/UI-III-Flexbox/tree/elysia-gabe">View on GitHub.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/surfer.png" class="image fit thumb"><img src="images/surfer_1.png" alt="Illustration of female surfer carrying a pink surfboard." /></a>
+								<h3>Surfer Illustration</h3>
+								<p>Vector illustration of surfer created in Sketch.<br/>
+								<a href="https://dribbble.com/shots/9692268-Surfer">View on Dribbble.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
