Updates Recent Work section

--- a/portfolio-template/index.html
+++ b/portfolio-template/index.html
@@ -41,22 +41,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="http://g.recordit.co/tk70HywTQd.gif" class="image fit thumb"><img src="images/mika-florals-screenshot.png" alt="Screenshot of Mika Florals Website" /></a>
+								<a href="http://g.recordit.co/tk70HywTQd.gif" class="image fit thumb"><img src="images/mika-florals-screenshot.png" alt="Screenshot of website for fictional florist Mika Florals" /></a>
 								<h3>Mika Florals Website</h3>
 								<p>One-page concept website for a fictinal florist and flower shop.<br/>
-								<a href="https://codepen.io/elysia-gabe/pen/vYBoyzm">View on CodePen.</a></p>
+								<a href="https://codepen.io/elysia-gabe/pen/vYBoyzm" target="_blank">→ View on CodePen.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/great-idea-screenshot.png" alt="" /></a>
+								<a href="http://g.recordit.co/jz4Mqj1rGu.gif" class="image fit thumb"><img src="images/great-idea-screenshot.png" alt="Screenshot of website for fictional company Great Idea" /></a>
 								<h3>Great Idea Agency Website</h3>
 								<p>Concept website for a ficitional digital services agency. Pages include Home, Services and About.<br/>
-								<a href="https://github.com/elysiagabe/UI-III-Flexbox/tree/elysia-gabe">View on GitHub.</a></p>
+								<a href="https://github.com/elysiagabe/UI-III-Flexbox/tree/elysia-gabe" target="_blank">→ View on GitHub.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/surfer.png" class="image fit thumb"><img src="images/surfer_1.png" alt="Illustration of female surfer carrying a pink surfboard." /></a>
 								<h3>Surfer Illustration</h3>
 								<p>Vector illustration of surfer created in Sketch.<br/>
-								<a href="https://dribbble.com/shots/9692268-Surfer">View on Dribbble.</a></p>
+								<a href="https://dribbble.com/shots/9692268-Surfer" target="_blank">→ View on Dribbble.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
