--- a/portfolio-template/index.html
+++ b/portfolio-template/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Elysia Gabe is an Oakland-based aspiring web developer and designer, currently studying at Lambda School. Take a look at some of her recent work below.</p>
+						<p>Elysia Gabe is an Oakland-based aspiring web developer and designer, currently studying at Lambda School. This portfolio is a work in progress. Take a look at some of her recent work below.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -440,10 +440,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/elysiagabe" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://dribbble.com/elysiagabe" target="_blank" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="mailto:elysiagabe@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
